Add laptop notice

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 						<small>
 							Do you have all prerequisites?<br/>
 							<br/>
+							Please bring your own laptop<br/>
 							Visual Studio<br/>
 							Microsoft Azure<br/>
 							Visual Studio Team Services
