--- a/index.html
+++ b/index.html
@@ -198,18 +198,34 @@
 				<section>
 					<h2>Tools and Extensions</h2>
 
-					<p class="fragment">Note: ASP.NET 5, Core 1.0, and .NET Core 1</p>
-
 					<ul class="fragment">
 						<li><a href="https://nodejs.org/en/" target="_blank">Node.js with NPM</a></li>
 						<li><a href="https://git-scm.com/" target="_blank">Git for Windows</a></li>
-						<li><a href="https://visualstudiogallery.msdn.microsoft.com/c94a02e9-f2e9-4bad-a952-a63a967e3935" target="_blank">ASP.NET and Web Tools for VS 2015 (Preview)</a></li>
 						<li><a href="https://azure.microsoft.com/en-us/downloads/" target="_blank">Azure SDK for VS 2015</a></li>
 						<li><a href="http://aka.ms/webpi-azps/" target="_blank">Azure PowerShell</a></li>
 						<li><a href="http://www.putty.org/" target="_blank">PuTTY</a></li>
 						<li>Optionally: <a href="https://visualstudiogallery.msdn.microsoft.com/0f5b2caa-ea00-41c8-b8a2-058c7da0b3e4" target="_blank">VS 2015 Tools for Docker (Preview)</a></li>
 						<li>Optionally: <a href="https://www.docker.com/products/docker-toolbox" target="_blank">Docker Toolbox</a> (you can use Azure instead)</li>
 					</ul>
+				</section>
+
+				<section>
+					<h2>ASP.NET Core 1.0</h2>
+
+					<p>
+						Note the fundamental differences between RC1 and RC2!
+						<small>Ask your trainer before the training which version you will need!</small>
+					</p>
+
+					<p>
+						You want to work with RC1?<br/>
+						<small><a href="https://docs.asp.net/en/1.0.0-rc1/getting-started/installing-on-windows.html" target="_blank">ASP.NET Core 1.0 RC1</a></small>
+					</p>
+
+					<p>
+						You want to work with RC2?<br/>
+						<small><a href="https://www.microsoft.com/net/core#windows" target="_blank">ASP.NET Core 1.0 RC2</a></small>
+					</p>
 				</section>
 
 				<section>
